<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wow">

    <Button
        android:id="@+id/btnAnnouncement"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/announcement"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"/>

    <Button
        android:id="@+id/btnDepartment"
        android:layout_below="@+id/btnAnnouncement"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/department"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:alpha="0"/>

    <Button
        android:id="@+id/btnCouncil"
        android:layout_below="@+id/btnDepartment"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/council"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:alpha="0"/>

    <Button
        android:id="@+id/btnPlatform"
        android:layout_below="@+id/btnCouncil"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/platform"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:alpha="0"/>
    <Button
        android:id="@+id/btnGuest"
        android:layout_below="@+id/btnPlatform"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/guest"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:alpha="0"/>


</RelativeLayout>