<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
  >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/photo">

            <!-- Panel 1 -->
            <LinearLayout
                android:id="@+id/panel1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:padding="16dp">

                <TextView
                    android:id="@+id/panel1_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Prayer Department"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/panel1_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Prayer is the way of communicatig with God that we as children speak and request and God as father answers our prayer according to his will"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />
                <ImageView
                    android:id="@+id/imageview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/photo1681220345"/>

            </LinearLayout>

            <!-- Panel 2 -->
            <LinearLayout
                android:id="@+id/panel2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/panel2_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/panel_2"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
                <ImageView
                    android:id="@+id/imageview01"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/photo1681220337"/>



                <TextView
                    android:id="@+id/panel2_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/panel_2_content"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/panel3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/panel3_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/panel_3"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
                <ImageView
                    android:id="@+id/imageview1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/photo1681220332"/>


                <TextView
                    android:id="@+id/panel3_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Jesus is the way and the only way to heaven those who believe in him will live  an everlasting life that no one would ever could recognize"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />



            </LinearLayout>
            <LinearLayout
                android:id="@+id/panel4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/panel4_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/panel_4"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
                <ImageView
                    android:id="@+id/imageview2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/worship"/>


                <TextView
                    android:id="@+id/panel4_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/panel_4_content"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/panel5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/panel5_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/panel_5"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
                <ImageView
                    android:id="@+id/imageview4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/photo1681220344"/>


                <TextView
                    android:id="@+id/panel5_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/panel_5_content"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/panel6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/panel6_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/panel_6"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />


                <ImageView
                    android:id="@+id/imageview5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/photo1681220343" />

                <TextView
                    android:id="@+id/panel6_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/panel_6_content"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

            </LinearLayout>

            <!-- Panel 2 -->
            <LinearLayout
                android:id="@+id/panel7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/panel7_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/panel_7"

                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
                <ImageView
                    android:id="@+id/imageview6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/photo1681221839"/>


                <TextView
                    android:id="@+id/panel7_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/panel_7_content"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/panel8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/panel8_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/panel_8"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
                <ImageView
                    android:id="@+id/imageview7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/love"/>


                <TextView
                    android:id="@+id/panel8_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/panel_8_content"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/panel9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/panel9_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/panel_9"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
                <ImageView
                    android:id="@+id/imageview9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/photo1681222950"/>


                <TextView
                    android:id="@+id/panel9_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/panel_9_content"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/panel10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/panel10_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/panel_10"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
                <ImageView
                    android:id="@+id/imageview10"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/photo1681224230"/>


                <TextView
                    android:id="@+id/panel10_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/panel_10_content"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/panel11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/panel11_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/panel_11"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
                <ImageView
                    android:id="@+id/imageview90"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/photo1681224430"/>


                <TextView
                    android:id="@+id/panel11_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/panel_11_content"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

            </LinearLayout>



            <!-- Add panels 3-11 here -->

            <!-- Password field with button -->
            <LinearLayout
                android:id="@+id/password_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/darker_gray"
                android:orientation="horizontal"
                android:padding="16dp">

                <EditText
                    android:id="@+id/password_field"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="Enter password"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/submit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Submit"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>






